--- a/tests/index.html
+++ b/tests/index.html
@@ -9,10 +9,12 @@
 		<a href="../">Demo</a>
 		<div id="qunit"></div>
 		<div id="qunit-fixture"></div>
+		<script src="../../core/qunit/qunit.js"></script>
 		<script src="../triangle.js"></script>
 		<script src="../hand.js"></script>
 		<script src="../clock.js"></script>
-		<script src="../../core/qunit/qunit.js"></script>
+		<script src="../TextCanvas.js"></script>
+		<script src="../TextCanvas2DContext.js"></script>
 		<script>
 			test( "triangle basics", function() {
 				var t = new Triangle(10,45);
@@ -43,6 +45,9 @@
 				ok(c.getHourHand(),"A clock has a hour hand");
 				var c = new Clock(new Date(null,null,null,1,8,9));
 				equal(c.toString(), "01:08:09 AM", "toString() should be in 12-H format with padded values and an AM/PM suffix");
+			});
+			test("text canvas basics", function(){
+				var c = new TextCanvas();
 			});
 		</script>
 	</body>
